<resources>
    <string name="app_name">Sobriety test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_reset">Password reset</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_your_email">Enter your email</string>

    <string name="add">+</string>
    <string name="result">Result</string>
    <string name="when_did_you_drink_hour">When did you drink? (hour)</string>
    <string name="when_did_you_drink_date">When did you drink? (date)</string>
    <string name="degree">Degree (%)</string>
    <string name="quantity_ml">Quantity (mL)</string>
    <string name="show">Show</string>
    <string name="login">Login</string>


    <string name="quantity">Quantity (mL):</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="gender">~Gender</string>
    <string name="height">~Height</string>
    <string name="weight">~Weight</string>
    <string name="age">~Age</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">2772813582961315</string>
    <string name="fb_login_protocol_scheme">fb2772813582961315</string>

    <string name="msg"> permission</string>
    <string name="select_location">Select location</string>
    <string name="taxi_numbers_in_your_area">Taxi numbers in your area:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="add_drink">Add drink</string>
    <string name="show_drinks">Show drinks</string>
    <string name="list_drinks">List drinks</string>
</resources>