<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="5dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/degreeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/degree"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hourInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/degreeInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/when_did_you_drink_hour" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hourInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/when_did_you_drink_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_below="@id/dateInput"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mybutton"
            android:textColor="#FFFFFF"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_below="@id/dateInput"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mybutton"
            android:textColor="#FFFFFF"
            android:text="@string/save" />
    </RelativeLayout>


</RelativeLayout>