<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main_screen"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/resultButton"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/mybutton"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showButton"
        app:layout_constraintVertical_bias="0.41000003" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="65dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/show_button"
        android:text="@string/show"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/dateInputLayout" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/add_button"
        android:lineSpacingExtra="0sp"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBaseline_toBaselineOf="@+id/showButton"
        app:layout_constraintEnd_toStartOf="@+id/showButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_horizontal_margin"
        android:layout_marginEnd="@dimen/global_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_ml"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/degreeInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/global_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/degree"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hourInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/global_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degreeInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/when_did_you_drink_hour"
            android:clickable="true"
            android:focusableInTouchMode="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/global_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/when_did_you_drink_date"
            android:clickable="true"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>
