<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_row"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/textQuantity"
            android:layout_toRightOf="@id/textQuantity"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textQuantity"
            android:text="@string/degree"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputQuantity"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/textDegree"
            android:layout_toRightOf="@id/textDegree"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textDegree"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputDegree"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/textDate"
            android:layout_toRightOf="@id/textDate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textDate"
            android:text="@string/time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inputTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputDate"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/textTime"
            android:layout_toRightOf="@id/textTime"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@id/editButton"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/inputTime"
            android:layout_toRightOf="@id/inputTime"
            android:background="@null"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/inputQuantity"
            android:layout_toEndOf="@id/inputQuantity"
            android:background="@null"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>